--- a/action.yml
+++ b/action.yml
@@ -369,6 +369,9 @@ runs:
         THIS_ACTION_PATH=$(realpath "$GITHUB_ACTION_PATH")
         echo "THIS_ACTION_PATH=$THIS_ACTION_PATH" >> "$GITHUB_ENV"
         echo "PATH=$THIS_ACTION_PATH/wrappers:$PATH" >> "$GITHUB_ENV"
+        echo "THIS_GITHUB_JOB_ID=$THIS_GITHUB_JOB_ID" >> "$GITHUB_ENV"
+      env:
+        THIS_GITHUB_JOB_ID: ${{ github.job }}
     - name: check-actions
       id: check-actions
       env:
