test.yml: Apply permissions
Based on GitHubSecurityLab/actions-permissions/monitor@v1
https://github.com/jsoref/check-spelling/actions/runs/7331431123

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -10,6 +10,8 @@ on:
 jobs:
   test:
     name: Perl
+    permissions:
+      contents: read
     runs-on: ubuntu-latest
     if: contains(github.event_name, 'pull_request') || github.event_name == 'push'
     steps:
