action: Adjust experimental_parallel_jobs
GitHub runners now have 4 cpu for open source repositories instead of 2 for Windows/Linux:
https://github.blog/2024-01-17-github-hosted-runners-double-the-power-for-open-source/

Instead of just defaulting to 2 which has been a reasonable choice, default to detecting
the number of CPUs.

Note that macOS runners are sufficiently expensive / rare that they are not recommended.
Similarly, Windows runners are fairly expensive that they are not recommended.

--- a/action.yml
+++ b/action.yml
@@ -39,9 +39,8 @@ inputs:
     default: "0"
     required: false
   experimental_parallel_jobs:
-    description: 'Number of CPUs available for running checks'
+    description: 'Number of CPUs available for running checks (defaults to number of processors)'
     required: false
-    default: '2'
   post_comment:
     description: 'Post comment with report'
     required: false
